--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,12 @@
+---
+layout: default
+title: Welcome to HTML!
+---
+
+  <h1> {{ page.title}} </h1>
+  
+  <h2>Introduction</h2>
+  <p> Hello world!... This is my first page by the way :) <br>
+    HTML stands for Hyper Text Markup Language </p>
+
 
