--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,9 @@ title: Welcome to HTML!
   <h1> {{ page.title}} </h1>
   
   <h2>Introduction</h2>
+  <img src="images/HELLO_WORLD_PIC.jpg" alt="Hello World!" width = "500" height = "400" >
+
   <p> Hello world!... This is my first page by the way :) <br>
     HTML stands for Hyper Text Markup Language </p>
-
+  
 
