--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: Web Programming
 <div class="blurb">
   <h1>Hello Sweet World</h1>
   <p>Once upon a time, ..</p>
+  <img src="images/HELLO_WORLD_PIC.jpg" alt="Hello World!" width = "500" height = "400" >
 </div>
